pxc/tests/test_29_range/weakbyref2.px

namespace weakbyref;
import test_common "";

function int foo(slice{int}& sl)
{
  int r = sl.size();
  sl.next();
  vector{int} v2;
  slice{int} sl2 = v2;
  sl = sl2; // error: sl and sl2 refere different object
  return r;
}

function void t1()
{
  vector{int} v;
  v.resize(30, 0);
  v[10] = 5;
  slice{int} sl = v;
  int len = foo(sl);
  println(len);
}

t1();
